--- a/src/rb5_ros/april_detection/CMakeLists.txt
+++ b/src/rb5_ros/april_detection/CMakeLists.txt
@@ -13,7 +13,9 @@ find_package(catkin REQUIRED COMPONENTS
   tf
   std_msgs
   sensor_msgs
+  geometry_msgs
   cv_bridge
+  message_generation
 )
 
 find_package(apriltag REQUIRED)
@@ -53,11 +55,11 @@ find_package(OpenCV REQUIRED)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  AprilTagDetection.msg
+  AprilTagDetectionArray.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -74,10 +76,11 @@ find_package(OpenCV REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -111,12 +114,13 @@ find_package(OpenCV REQUIRED)
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES april_detection
-  CATKIN_DEPENDS 
-  roscpp 
+  CATKIN_DEPENDS
+  roscpp
   rospy
   std_msgs
   sensor_msgs
   cv_bridge
+  message_runtime
 #  DEPENDS system_lib
 )
 
